Copy src files from previous repo

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,317 @@
+/* ROOT VARIABLES AND SIZES */
+:root {
+    --primary-color1: #000080;
+    --primary-shaded-color1: #000080ad;
+    --primary-color2: #ffffff;
+
+    --primary-color9: #000000;
+
+    --secondary-color1: #535353;
+    --secondary-color-sunny: #f1e74fe7;
+    --secondary-color-humidity: #3e3bff;
+    --secondary-color-cloud: #68e8f1;
+    --secondary-color-mist: #92f0f7d7;
+    --secondary-color-heatIndex: #ff413b;
+    --secondary-color-wind: #77f5b6;
+
+    font-size: 16px;
+}
+
+/* BODY STYLESHEET */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 1.15rem;
+}
+
+.header,
+.footer {
+    padding: 0.5rem;
+    text-align: center;
+    color: var(--primary-color2);
+}
+
+.header {
+    background-color: var(--primary-color1);
+}
+
+.footer {
+    font-size: 1rem;
+    font-style: italic;
+    background-color: var(--primary-shaded-color1);
+}
+
+
+/* MAIN */
+.main {
+    flex-grow: 1;
+    background-image: linear-gradient( 109.6deg,  rgba(112,246,255,0.33) 11.2%, rgba(221,108,241,0.26) 42%, rgba(229,106,253,0.71) 71.5%, rgba(123,183,253,1) 100.2% );
+    padding: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/* SEARCHBAR AND SEARCH BUTTONS */
+.searchBar {
+    width: max-content;
+    padding: 0.65rem;
+    margin: 0 auto;
+    background-color: var(--primary-color2);
+    border-radius: 4px;
+
+    display: flex;
+    gap: 1rem;
+
+    box-shadow: 0px 0px 0.25rem var(--primary-color9);
+}
+
+.searchBar input[type="search"] {
+    border: none;
+    box-shadow: 0px 0px 4px var(--primary-color1);
+    outline: none;
+    font-family: inherit;
+    font-weight: bold;
+    font-size: 1rem;
+    padding: 0.35rem;
+}
+
+.searchBar input[type="search"]:focus {
+    box-shadow: 0px 0px 2px var(--primary-color1);
+}
+
+.searchBar .searchIcon {
+    cursor: pointer;
+}
+
+.searchBar > label,
+.searchBar > div {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.date-buttons {
+    border-left: 2px solid var(--secondary-color1);
+    padding-left: 1rem;
+}
+
+.searchBar button {
+    border: none;
+    background-color: var(--primary-shaded-color1);
+    color: var(--primary-color2);
+    font-family: inherit;
+    padding: 0.45rem;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+/* INDEX UI */
+.content {
+    width: fit-content;
+    margin: 1rem auto;
+    background: var(--primary-color2);
+    display: flex;
+    border-radius: 8px;
+    width: min(80vw, 800px);
+    padding: 1rem 0;
+    box-shadow: 0px 0px 0.5rem var(--primary-color9);
+}
+
+/* FIRST LEFT PART OF INDEX UI */
+.primary-info {
+    flex-basis: 60%;
+    padding: 0 1rem;
+}
+
+.heading-info {
+    text-align: center;
+    grid-column: span 2;
+}
+
+.description {
+    box-shadow: 0px 0px 6px var(--primary-color9);
+    margin: 1rem 0;
+    padding: 1rem 0;
+}
+
+.degrees {
+    font-weight: bold;
+    font-size: 1.4rem;
+}
+
+#description-icon {
+    margin-bottom: 0.5rem;
+    font-size: 2rem;
+}
+
+.description-text {
+    font-weight: 600;
+    text-shadow: 0px 0px 2px var(--primary-color9);
+    font-style: italic;
+}
+
+.body-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 1rem;
+}
+
+.body-info > div {
+    padding: 0.5rem;
+    border-radius: 4px;
+}
+
+.body-info > div > span {
+    font-size: 1.1rem;
+    display: inline-block;
+    border-bottom: 2px solid;
+    padding-bottom: 0.25rem;
+    margin-bottom: 0.25rem;
+}
+
+.humidity-info {
+    box-shadow: 0px 0px 4px var(--secondary-color-humidity);
+}
+
+.humidity-info > span {
+    color: var(--secondary-color-humidity);
+}
+
+.cloud-info {
+    box-shadow: 0px 0px 4px var(--secondary-color-cloud);
+}
+
+.cloud-info > span {
+    color: var(--secondary-color-cloud);
+}
+
+.heatIndex-info {
+    box-shadow: 0px 0px 4px var(--secondary-color-heatIndex);
+}
+
+.heatIndex-info > span {
+    color: var(--secondary-color-heatIndex);
+}
+
+.wind-info {
+    box-shadow: 0px 0px 4px var(--secondary-color-wind);
+}
+
+.wind-info > span {
+    color: var(--secondary-color-wind);
+}
+
+.data-title {
+    color : var(--primary-color9);
+}
+
+.body-info > div > div {
+    font-weight: bold;
+}
+
+/* SECOND PART OF INDEX UI */
+.secondary-info {
+    flex-basis: 40%;
+    border-left: 2px solid var(--secondary-color1);
+    position: relative;
+}
+
+.extra-text {
+    display: block;
+    border: none;
+    background-color: var(--primary-color1);
+    color: var(--primary-color2);
+    font-family: inherit;
+    padding: 0.45rem;
+    cursor: pointer;
+    border-radius: 4px;
+    width: 80%;
+    margin: 0 auto;
+    position: relative;
+    z-index: 10;
+}
+
+.extra-img {
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0%;
+    bottom: 0%;
+    right: 5%;
+    left: 5%;
+    border: none;
+    outline: none;
+}
+
+@media screen and (max-width: 800px) {
+    :root {
+        font-size: 13px;
+    }
+
+    .content {
+        flex-direction: column;
+        gap: 1rem;
+    }   
+
+    .searchBar {
+        padding: 0.5rem;
+    }
+
+    .searchBar > label,
+    .searchBar > div {
+        gap: 0.65rem;
+    }
+
+    .secondary-info {
+        padding: 1rem 0 0 ;
+        min-height: 30vh;
+        border-left: none;
+        border-top: 2px solid var(--secondary-color1);
+    }
+
+    .extra-text {
+        position: relative;
+        z-index: 1;
+    }
+
+    .extra-img {
+        top: 1rem;
+        bottom: 0;
+        right: 1rem;
+        left: 1rem;
+    }
+}
+
+@media screen and (max-width: 415px) {
+    :root {
+        font-size: 10.5px;
+    }
+
+    .searchBar {
+        flex-direction: column;
+        width: 80vw;
+        padding: 1rem;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .date-buttons {
+        border-left: none;
+        border-top: 2px solid var(--secondary-color1);
+        padding: 1rem 0 0;
+    }
 }
